--- a/src/components/common/PostUpdate/index.scss
+++ b/src/components/common/PostUpdate/index.scss
@@ -2,8 +2,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   .post-status {
-    width: 80%;
+    width: 550px;
     height: 120px;
     background-color: whitesmoke;
     margin-top: 30px;
@@ -24,7 +25,7 @@
     border-radius: 30px;
     cursor: pointer;
     padding: 15px;
-    font-family: system-ui;
+    font-family: system-ui, sans-serif;
     font-weight: 600;
     font-style: normal;
   }
