done with profile

--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -10,6 +10,14 @@
   flex-direction: column;
   padding-bottom: 20px;
 
+  .name {
+    font-family: system-ui, sans-serif;
+    font: size 14px;
+    color: rgba(0, 0, 0, 0.6);
+    font-weight: 400;
+    margin: 0px 0 0 10px;
+  }
+
   .timestamp {
     font-family: system-ui, sans-serif;
     font: size 12px;
