--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -4,4 +4,27 @@
   background-color: whitesmoke;
   margin: 30px;
   border-radius: 5px;
+  padding: 20px;
+  position: relative;
+
+  .edit-btn {
+    position: absolute;
+    right: 20px;
+    button {
+      cursor: pointer;
+    }
+  }
+
+  .userName {
+    font-family: system-ui;
+    color: rgba(0, 0, 0, 0.9);
+    font-weight: 600;
+    font-size: 24px;
+  }
+  .userEmail {
+    margin-top: -20px;
+    font-family: system-ui;
+    color: rgba(0, 0, 0, 0.9);
+    font-size: 16px;
+  }
 }
