profile details updation in firebase implemented

--- a/src/components/common/ProfileEdit/index.scss
+++ b/src/components/common/ProfileEdit/index.scss
@@ -1,6 +1,10 @@
+$linkedinBlue1: #0072b1;
+$linkedinBlue2: #0073b1;
+$linkedinBlue3: #004c75;
+
 .profile-card {
   width: auto;
-  height: 50vh;
+  height: auto;
   background-color: whitesmoke;
   margin: 30px;
   border-radius: 5px;
@@ -20,8 +24,32 @@
   display: grid;
   margin-top: 40px;
   gap: 20px;
-  .edit-input{
-    width:300px;
+  .edit-input {
+    width: 300px;
     height: 40px;
+  }
+}
+
+.save-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  .save-btn {
+    width: 300px;
+    height: 50px;
+    cursor: pointer;
+    background-color: $linkedinBlue2;
+    border-radius: 30px;
+    outline: none;
+    border: none;
+    font-family: system-ui;
+    font-weight: 600;
+    font-size: 18px;
+    color: #ffffff;
+    margin-top: 20px;
+  }
+
+  .save-btn:hover {
+    background-color: $linkedinBlue3;
   }
 }
