--- a/src/Sass/LoginComponent.scss
+++ b/src/Sass/LoginComponent.scss
@@ -56,28 +56,28 @@ body {
   flex-direction: column;
   gap: 10px;
   width: 300px;
-  // padding: 10px;
+  padding: 10px;
 
-  //   .common-input {
-  //     height: 20px;
-  //     background-color: white;
-  //     padding: 10px;
-  //     outline: none;
-  //     border: 1px solid #212121;
-  //     font-family: system-ui;
-  //     color: #212121;
-  //     border-radius: 3px;
-  //     margin: 10px 0;
-  //     font-size: 16px;
-  //   }
-  //   .common-input:focus {
-  //     outline: 1px solid $linkedinBlue1;
-  //   }
-  // }
-  // ::placeholder {
-  //   font-family: system-ui;
-  //   font-size: 16px;
-  // }
+    .common-input {
+      height: 20px;
+      background-color: white;
+      padding: 10px;
+      outline: none;
+      border: 1px solid #212121;
+      font-family: system-ui;
+      color: #212121;
+      border-radius: 3px;
+      margin: 10px 0;
+      font-size: 16px;
+    }
+    .common-input:focus {
+      outline: 1px solid $linkedinBlue1;
+    }
+  }
+  ::placeholder {
+    font-family: system-ui;
+    font-size: 16px;
+  }
 
   .linkedinLogo {
     width: 80px;
@@ -137,4 +137,4 @@ body {
       cursor: pointer;
     }
   }
-}
+
