--- a/src/components/common/Topbar/index.scss
+++ b/src/components/common/Topbar/index.scss
@@ -34,3 +34,10 @@
   color: black;
   cursor: pointer;
 }
+
+.popup-position {
+  position: absolute;
+  right: 10px;
+  top: 65px;
+  z-index: 99;
+}
