--- a/src/components/common/ProfilePopup/index.scss
+++ b/src/components/common/ProfilePopup/index.scss
@@ -1,15 +1,28 @@
 .popup-card {
   border: 1px solid #a8a8a8;
   width: 200px;
-  height: 100px;
+  height: auto;
   background-color: whitesmoke;
   border-radius: 5px;
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  flex-direction: column;
+  .name {
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.9);
+    font-weight: 600;
+    text-align: left;
+    margin-top: -10px;
+  }
+  .headline {
+    font-size: 14px;
+    font-weight: 400;
+    color: rgba(0, 0, 0, 0.9);
+    margin-top: -15px;
+  }
 
-  .popup-options {
-    list-style: none;
-
-    .popup-option {
-      cursor: pointer;
-    }
+  .popup-option {
+    cursor: pointer;
   }
 }
