--- a/src/components/common/ProfileEdit/index.scss
+++ b/src/components/common/ProfileEdit/index.scss
@@ -28,12 +28,19 @@ $linkedinBlue3: #004c75;
     width: 300px;
     height: 40px;
   }
+  label {
+    font-family: system-ui;
+  }
+}
+
+.close-icon {
+  cursor: pointer;
 }
 
 .save-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .save-btn {
     width: 300px;
     height: 50px;
