--- a/src/components/common/LikeButton/index.scss
+++ b/src/components/common/LikeButton/index.scss
@@ -1,13 +1,44 @@
 .like-container {
   display: flex;
-  align-items: center;
   gap: 5px;
+  flex-direction: column;
+  justify-content: center;
   padding: 7px 10px;
   cursor: pointer;
-
+  margin-bottom: -20px;
+  .hr-line {
+    margin-top: -17px;
+    hr {
+      border-top: 1px solid rgb(181, 181, 181);
+    }
+  }
   p {
     font-family: system-ui;
-    font-weight: 600;
-    color: rgba(0, 0, 0, 0.835);
+    font-weight: 400;
+    font-size: 14px;
+    color: rgba(58, 58, 58, 0.835);
+    margin-left: 5px;
+  }
+  p:hover {
+    color: #0a66c2;
+    text-decoration: underline;
+  }
+  .likes-inner {
+    display: flex;
+    align-items: center;
+    margin-top: -20px;
+    .black {
+      color: rgba(58, 58, 58, 0.835);
+    }
+    .blue {
+      color: #0a66c2;
+    }
+    p {
+      font-family: system-ui;
+      font-weight: 400;
+      font-size: 16px;
+      color: rgba(58, 58, 58, 0.835);
+      margin-left: 5px;
+    }
   }
 }
