--- a/src/components/common/ProfileCard/index.scss
+++ b/src/components/common/ProfileCard/index.scss
@@ -11,6 +11,14 @@
     display: flex;
     justify-content: space-between;
 
+    .profile-image {
+      width: 200px;
+      height: 200px;
+      border-radius: 50%;
+      border: 2px solid #cacaca;
+      padding: 5px;
+      // clip-path: circle(50% at 50% 50%);
+    }
     .right-info {
       margin-top: 25px;
       margin-right: 20px;
@@ -42,7 +50,6 @@
   }
   .skill-label {
     font-weight: 600;
-    
   }
   .website {
     color: #004c75 !important;
