--- a/src/components/common/LikeButton/index.scss
+++ b/src/components/common/LikeButton/index.scss
@@ -6,9 +6,13 @@
   padding: 7px 10px;
   cursor: pointer;
   margin-bottom: -20px;
+  p {
+    font-family: Inter, sans-serif;
+  }
 
   .like-comment {
     display: grid;
+    margin-top: 5px;
     grid-template-columns: auto auto auto auto;
   }
 
@@ -45,10 +49,12 @@
     border-radius: 10px;
     position: relative;
     justify-content: center;
-    margin: 10px 0;
+    margin: 10px;
     .name {
       color: #212121;
       text-decoration: none;
+      margin-left: 10px;
+      margin-top: 10px;
     }
     .comment {
       margin-left: 10px;
@@ -67,7 +73,7 @@
     }
   }
   p {
-    font-family: system-ui;
+    font-family: Inter, sans-serif;
     font-weight: 400;
     font-size: 14px;
     color: rgba(58, 58, 58, 0.835);
@@ -88,7 +94,7 @@
       color: #0a66c2;
     }
     p {
-      font-family: system-ui;
+      font-family: Inter, sans-serif;
       font-weight: 400;
       font-size: 16px;
       color: rgba(58, 58, 58, 0.835);
