--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -9,14 +9,24 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 20px;
+  .post-image-wrapper {
+    display: flex;
+    padding: 15px;
+    gap: 10px;
+  }
 
+  .post-image {
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
   .name {
     font-family: system-ui, sans-serif;
-    font: size 16px;
-    color: rgba(15, 17, 157, 0.6);
+    font: size 18px;
+    color: #212121;
     font-weight: 600;
-    margin: 0px 0 0 10px;
-    text-decoration: underline;
+    margin: 0px 0 0 0px;
     cursor: pointer;
   }
 
@@ -25,14 +35,14 @@
     font: size 12px;
     color: rgba(0, 0, 0, 0.6);
     font-weight: 400;
-    margin: 0px 0 0 10px;
+    margin: 0px 0 0 0px;
   }
   .status {
     margin: 10px 0 0 10px;
     text-align: left;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 400;
-    font-family: system-ui, sans-serif;
+    font-family: Inter, sans-serif;
     color: rgba(0, 0, 0, 0.9);
   }
 }
