--- a/src/components/common/PostsCard/index.scss
+++ b/src/components/common/PostsCard/index.scss
@@ -1,6 +1,6 @@
 .posts-card {
   width: 550px;
-  min-height: 120px;
+  min-height: auto;
   // max-height: auto;
   background-color: whitesmoke;
   margin-top: 30px;
@@ -13,6 +13,7 @@
     display: flex;
     padding: 15px;
     gap: 10px;
+    position: relative;
   }
 
   .post-image {
@@ -44,5 +45,24 @@
     font-weight: 400;
     font-family: Inter, sans-serif;
     color: rgba(0, 0, 0, 0.9);
+  }
+
+  .action-container {
+    // position: absolute;
+    // right: 20px;
+    margin-left: 180px;
+    cursor: pointer;
+    display: flex;
+    top: 10px;
+    .action-icon {
+      color: #474747;
+      padding: 10px;
+    }
+    .action-icon:hover {
+      color: #000000;
+      background-color: #b7b7b7;
+      padding: 10px;
+      border-radius: 50%;
+    }
   }
 }
