--- a/src/components/common/Modal/index.scss
+++ b/src/components/common/Modal/index.scss
@@ -5,4 +5,23 @@
   color: black;
   font-size: 16px;
   width: 100%;
+  resize: none;
+}
+
+.picture-icon {
+  color: #0073b1;
+  cursor: pointer;
+  position: absolute;
+  bottom: 20px;
+}
+
+.preview-image {
+  width: 100%;
+  margin-top: 20px;
+}
+.posts-body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
