committed final changes

--- a/src/components/common/PostUpdate/index.scss
+++ b/src/components/common/PostUpdate/index.scss
@@ -67,6 +67,7 @@
     font-family: system-ui, sans-serif;
     font-weight: 600;
     font-style: normal;
+    margin-left: -30px;
   }
   .open-post-modal:hover {
     background-color: rgb(227, 224, 224);
