--- a/src/components/common/Modal/index.scss
+++ b/src/components/common/Modal/index.scss
@@ -7,7 +7,16 @@
   width: 100%;
   resize: none;
 }
+.ql-container.ql-snow,
+.ql-toolbar.ql-snow {
+  border: none !important;
+}
 
+.ql-container.ql-snow {
+  height: 100px;
+  font-family: system-ui;
+  font-size: 20px;
+}
 .picture-icon {
   color: #0073b1;
   cursor: pointer;
