--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,13 @@ $linkedinBlue3: #004c75;
   line-height: 1.5;
   font-weight: 400;
   color: #212121;
-  background-color: rgb(225, 224, 224);
+  background-color: rgba(224, 224, 224,0.87);
+
+  // font-synthesis: none;
+  // text-rendering: optimizeLegibility;
+  // -webkit-font-smoothing: antialiased;
+  // -moz-osx-font-smoothing: grayscale;
+  // -webkit-text-size-adjust: 100%;
 }
 
 .common-input {
@@ -23,7 +29,7 @@ $linkedinBlue3: #004c75;
   border-radius: 3px;
   font-family: system-ui;
   font-size: 16px;
- }
+}
 .common-input:focus {
   outline: 1px solid $linkedinBlue1;
 }
